<resources>
    <string name="app_name">MusicApp</string>
    <string name="activity_Rock">Rock Albums</string>
    <string name="activity_pop">Pop Albums</string>
    <string name="activity_metal">Metal Albums</string>
    <string name="activity_hiphop">Hip Hop Albums</string>



    <string name="metal_album">Metal Albums</string>
    <string name="hip_hop_album">Hip Hop Albums</string>
    <string name="title_activity_rock_album2">RockAlbum2Activity</string>
    
    <!-- Activity names -->
    <string name="rock_album1">Linkin Park - Hybrid Theory</string>
    <string name="rock_album2">Foo Fighter - Skin and Bones</string>
    <string name="pop_album1">Justin Timberlake - Future Sex/Love Sounds</string>
    <string name="pop_album2">Maroon 5 - Overexposed</string>
    <string name="metal_album1">In Flames - Clayman</string>
    <string name="metal_album2">Parkway Drive - Horizons</string>
    <string name="hiphop_album1">Dr. Dre - The Cronic</string>
    <string name="hiphop_album2">N.W.A. - Straight Outta Compton</string>

    <!-- Category Strings -->
    <string name="Rock">Rock</string>
    <string name="Pop">Pop</string>
    <string name="Metal">Metal</string>
    <string name="Hip_Hop">Hip Hop</string>

    <!-- Albums -->
    <string name="LP_theory">Hybrid Theory</string>
    <string name="foo">Skin and Bones</string>
    <string name="justin_future">Future Sex/Love Sounds</string>
    <string name="maroonAlb">Overexposed</string>
    <string name="in_flames_Alb">Clayman</string>
    <string name="PWD_alb">Horizons</string>
    <string name="Dr_Dre_alb">Cronic</string>
    <string name="NWA_alb">Straight Out Of Compton</string>

    <!-- Artists -->
    <string name="linkin_park">Linkin Park</string>
    <string name="foo_fighters">Foo Fighters</string>
    <string name="justin">Justin Timberlake</string>
    <string name="maroon_5">Maroon 5</string>
    <string name="in_flames">In Flames</string>
    <string name="parkway">Parkway Drive</string>
    <string name="Dr_Dre">Dr.Dre</string>
    <string name="NWA">N.W.A.</string>
</resources>
