<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BackgroundLayout"
    android:paddingTop="5dp"
    tools:context=".RockActivity">

    <ImageView
        android:id="@+id/Dr._Dre_Aalbum"
        style="@style/album_image_view"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/thechronic" />

    <View
        android:id="@+id/divider_main_1"
        style="@style/DividerBarsAlbums"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
         />

    <TextView
        android:id="@+id/Dr._Dre"
        style="@style/album_artist_textview_top"
        android:layout_toEndOf="@id/Dr._Dre_Aalbum"
        android:layout_toRightOf="@id/Dr._Dre_Aalbum"
        android:text="@string/Dr_Dre"
        />

    <View
        android:id="@+id/divider_main_2"
        style="@style/DividerBarsAlbums"
        android:layout_width="match_parent"
        android:layout_below="@+id/Dr._Dre"
        android:layout_toEndOf="@+id/Dr._Dre_Aalbum" />


    <TextView
        android:id="@+id/theChronic"
        style="@style/album_artist_textview_bottom"
        android:layout_below="@id/Dr._Dre"
        android:layout_toRightOf="@id/Dr._Dre_Aalbum"
        android:text="@string/Dr_Dre_alb"
        />

    <View
        android:id="@+id/divider_main_3"
        style="@style/DividerBarsAlbums"
        android:layout_width="match_parent"
        android:layout_below="@+id/Dr._Dre_Aalbum"
        android:layout_marginBottom="5dp"/>

    <ImageView
        android:id="@+id/NWD_Album"
        style="@style/album_image_view"
        android:layout_below="@id/divider_main_3"
        android:src="@drawable/nwa" />

    <View
        android:id="@+id/divider_main_4"
        style="@style/DividerBarsAlbums"
        android:layout_width="match_parent"
        android:layout_alignTop="@+id/NWD_Album"
        android:layout_toEndOf="@+id/Dr._Dre_Aalbum" />

    <TextView
        android:id="@+id/NWA"
        style="@style/album_artist_textview_top"
        android:layout_toEndOf="@id/NWD_Album"
        android:layout_toRightOf="@id/NWD_Album"
        android:layout_below="@id/divider_main_4"
        android:text="@string/NWA" />

    <View
        android:id="@+id/divider_main_5"
        style="@style/DividerBarsAlbums"
        android:layout_width="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/NWD_Album"
        android:layout_below="@id/NWA" />

    <TextView
        android:id="@+id/textview"
        style="@style/album_artist_textview_bottom"
        android:layout_height="56dp"
        android:layout_below="@id/NWA"
        android:layout_toEndOf="@id/NWD_Album"
        android:text="@string/NWA_alb" />

    <View
        android:id="@+id/divider_main_6"
        style="@style/DividerBarsAlbums"
        android:layout_width="match_parent"
        android:layout_below="@+id/NWD_Album" />

</RelativeLayout>